--- a/index.html
+++ b/index.html
@@ -576,7 +576,8 @@ function copiarScript() {
       </div>
       <div class="modal-body">
         <p>Agora você tambem pode rodar o script caso não consiga baixar.</p>
-        <p class="text-body-secondary">Leia como executar o script. Caso prefira o executavel leia <a
+        <p class="text-body-secondary">Leia como <a
+              href="#executandoScript">executar o script</a>. Caso prefira o executavel leia <a
               href="#download">fazendo dowload</a>. Lembre-se de utilize o edge</p>
       </div>
       <div class="modal-footer">
