--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ $ButtonStart.Add_Click({
     $main_form.Topmost = $true
     $Day = Get-Date;
         if($count -eq 0){
-            //Ao abrir meu site você está me incentivando a manter o programa. Obrigado.
+            #Ao abrir meu site você está me incentivando a manter o programa. Obrigado.
             Start-Process "https://jeanoliveiragomes.github.io";
             $timer.add_tick({runSempreOnline})
             $count = 1;
