--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@ function copiarScript() {
                 class="btn btn-success btn-lg">Copiar Script.</a>
             </div>
             <div class="col-5">
-              <a style="font-weight: bold;background-color: #1e297e !important;width: 100%;"
+              <!--<a style="font-weight: bold;background-color: #1e297e !important;width: 100%;"
                 href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe"
-                class="btn btn-success btn-lg">Baixar</a>
+                class="btn btn-success btn-lg">Baixar</a> -->
             </div>
           </div>
           <p class="text-body-secondary">Versão Atual: V2.0.9 <br>Veja como executar o script ou baixar no topico <a
